# mksite

./: .clang-format  .gitignore  CMakeLists.txt  blog.txt  compile.sh  html.h  index.html  justfile  main.c  styles.css
content/posts/: first_post.txt  hi_mom.txt  learning_about_snprintf.txt  notes_on_snprintf.txt
